--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pytorch_accelerated==0.1.22
 scikit_image==0.19.2
 scikit_learn==1.0.2
 scipy==1.8.0
-skimage
+scikit-image
 timm==0.5.4
 torch==1.9.1
 torchmetrics==0.7.2
